--- a/src/styles/Navigation.scss
+++ b/src/styles/Navigation.scss
@@ -240,7 +240,12 @@ li {
 /*IPHONE 5, SE */
 @media only screen and (max-width: 325px) and (max-height: 570px) {
     .back-button {
-        bottom: 8rem;
+       transform: scale(0.8);
+       bottom: 8rem;
+    }
+    .next-button{transform: scale(0.8);bottom: 8rem;}
+    .more-button{
+        transform: scale(0.8);
     }
 }
 
