--- a/src/styles/WorkOne.scss
+++ b/src/styles/WorkOne.scss
@@ -15,13 +15,14 @@
     $solution-text-right: 50%;
 
     .row::after {
-        content: "";
         clear: both;
         display: flex;
         text-align: center;
         margin: 0;
         padding: 0;
-        display: inline;
+        justify-content: center;
+        align-content: center;
+        flex-direction: row;
     }
 
     .col-header {
@@ -216,7 +217,7 @@
     .col-1-lower {
         float: left;
         width: calc((100%/3));
-        height:10rem;
+        height: 10rem;
         text-align: right;
 
     }
@@ -227,7 +228,7 @@
         height: 10rem;
         text-align: center;
 
-        
+
     }
 
     .col-3-lower {
@@ -268,50 +269,240 @@
             width: 0%;
         }
     }
+
+    %center-absolute {
+        left: 0;
+        right: 0;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
     /*CREATE RESPONSIVE CSS FOR WORK ONE SCREEN */
-    @media only screen and (max-width:1080px){
-        .work-1-left{
+    @media only screen and (max-width:1080px) {
+        .work-1-left {
             width: 10%
         }
-        .work-1-right{
+
+        .work-1-right {
             width: 5%;
         }
     }
-    @media only screen and (max-width:1020px){
+
+    @media only screen and (max-width:1020px) {
         .col-1-lower {
             width: 100%;
             text-align: center;
 
         }
-    
+
         .col-2-lower {
-            width: 100%;  
+            width: 100%;
             text-align: center;
         }
-    
+
         .col-3-lower {
             width: 100%;
             text-align: center;
         }
-        .lulu-logo,.kroger-logo,.sphero-logo{
+
+        .lulu-logo,
+        .kroger-logo,
+        .sphero-logo {
             transform: scale(1);
         }
-        .lulu-logo{
+
+        .lulu-logo {
             top: 30rem;
             transform: translateX(-6rem);
         }
-        .sphero-logo{
+
+        .sphero-logo {
             top: 33rem;
             transform: translateX(-6rem);
         }
-        .kroger-logo{
+
+        .kroger-logo {
             top: 38rem;
             transform: translateX(-6rem);
             margin-block-end: 2rem;
         }
     }
-*{
-  /* box-sizing: border-box;  
-    border: 1px solid blue; */} 
-}
 
+    @media only screen and (max-width:880px) {
+
+        .lulu-logo,
+        .kroger-logo,
+        .sphero-logo {
+            transform: translateX(-3rem);
+        }
+    }
+
+    @media only screen and (max-width:720px) {
+
+        .lulu-logo,
+        .kroger-logo,
+        .sphero-logo {
+            transform: translateX(-2rem);
+        }
+
+        .the-role-header {
+            top: 20rem;
+        }
+
+        .the-job-header {
+            top: 22rem;
+        }
+    }
+
+    @media only screen and (min-height:760px) and (max-height: 860px) and (min-width:1021px) and (max-width: 1550px) {
+        .sphero-logo {
+            top: 40rem;
+        }
+
+        .lulu-logo {
+            top: 40rem;
+        }
+    }
+
+    @media screen and (min-height: 1060px) and (max-height: 1400px) {
+        .projects-header {
+            top: 35rem;
+        }
+
+        .kroger-logo {
+            top: 40rem;
+        }
+
+        .sphero-logo {
+            top: 44rem;
+        }
+
+        .lulu-logo {
+            top: 45rem;
+        }
+    }
+
+    /*Responsive scss for mobile*/
+    @media screen and (max-width: 600px) {
+        .work-1-left {
+            width: 0%
+        }
+
+        .work-1-left-center {
+            width: 100%;
+        }
+
+        .work-1-right-center {
+            width: 100%;
+
+        }
+
+        .work-1-right {
+            width: 0%;
+        }
+
+        .ff_logo {
+            top: 0rem;
+            width: 100%;
+        }
+
+        .the-description-text {
+            left: 0;
+            right: 0;
+            margin-left: auto;
+            margin-right: auto;
+            width: 80%;
+            top: 26rem;
+        }
+
+        .the-role-header {
+            text-align: center;
+            left: 0;
+            right: 0;
+            margin-left: auto;
+            margin-right: auto;
+            top: 32rem;
+        }
+
+        .the-job-header {
+            text-align: center;
+            left: 0;
+            right: 0;
+            margin-left: auto;
+            margin-right: auto;
+            top: 34rem;
+        }
+
+        .projects-header {
+            text-align: center;
+            left: 0;
+            right: 0;
+            margin-left: auto;
+            margin-right: auto;
+            top: 38rem;
+        }
+
+        .ff-job-details-button a {
+            top: 40rem;
+            transform: scale(0.8);
+            left: 0;
+            right: 0;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        .lulu-logo {
+            top: 45rem;
+            left: 0;
+            right: 0;
+            margin-left: auto;
+            margin-right: auto;
+            transform: translateX(0%);
+        }
+
+        .kroger-logo {
+            top: 50rem;
+            left: 0;
+            right: 0;
+            margin-left: auto;
+            margin-right: auto;
+            transform: translateX(0%);
+            transform: scale(0.8);
+        }
+
+        .sphero-logo {
+            top: 62rem;
+            left: 0;
+            right: 0;
+            margin-left: auto;
+            margin-right: auto;
+            margin-bottom: 5rem;
+            transform: translateX(0%);
+        }
+    }
+
+    @media screen and (max-width:400px) {
+        .ff_logo{
+        }
+        .work-1-left {
+            width: 0%
+        }
+
+        .work-1-left-center {
+            width: 100%;
+        }
+
+        .work-1-right-center {
+            width: 100%;
+        }
+
+        .work-1-right {
+            width: 0%;
+        }
+    }
+
+    * {
+        /* box-sizing: border-box;  
+    border: 1px solid blue; */
+    }
+}
