--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,6 +1,7 @@
 body {
-  margin: 0;
-  padding: 0;
+  margin: 0 !important;
+  padding: 0 !important;
+  max-width: 100%;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -8,7 +9,6 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: #03030C;
   height: 100%;
-  width: 100%;
   overflow-x: hidden;
 
 }
@@ -18,10 +18,8 @@ code {
     monospace;
 }
 html{
-  height: 100%;
 
 }
 .App{
-  height: 100%;
 
 }
